<resources>
    <string name="app_name">Cryptographer</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="cryptography">Cryptography</string>
    <string name="exercise">Exercises</string>
    <string name="help">Help</string>

    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="clear">Clear</string>
    <string name="plain_text"> Plain text </string>
    <string name="cipher_text"> Cipher Text </string>
    <string name="key"> Key </string>
    <string name="input">Input</string>
    <string name="output">Output</string>


    <string name="caeser_encryption">caeser cipher </string>
    <string name="caeser_helper_key">The key must be between values 1 and 25</string>


    <string name="affine_cipher">affine cipher</string>
    <string name="keyA"> Key A</string>
    <string name="keyB"> Key B</string>
    <string name="affine_helper_key">The key must be invertible in relation to 26</string>

    <string name="vignere_cipher">vigenere cipher</string>
    <string name="playfair_cipher">playfair cipher</string>


    <string name="transpositional_cipher">transpositional</string>
    <string name="transpositional_orthogonal">Orthogonal</string>
    <string name="transpositional_orthogonal_boustrophedon">Orthogonal Boustrophedon </string>
    <string name="transpositional_orthogonal_boustrophedon2">Orthogonal \n Boustrophedon </string>
    <string name="transpositional_diagonal">Diagonal</string>
    <string name="transpositional_helper_key">Key must consist of atleast 2 numbers.\n If sorted the key should consist of a series of incrementing values.</string>
    <string name="transpositional_helper_key2">Key must consist of atleast 2 numbers.\n If sorted the key should consist of a series of incrementing values.</string>
    <string name="transpositional_diagonal_key">Key must be shorter than the input. </string>
    <string name="trans_ortho_boustrophedon_cipher">transpositional orthogonal boustrophedon cipher</string>
    <string name="trans_ortho_cipher">transpositional orthogonal cipher</string>
    <string name="trans_diagonal_cipher">transpositional diagonal cipher</string>
    <string name="trans_method">Method:</string>

    <string name="title_exercises">Exercises</string>
    <string name="exercises_download">Download Exercises</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="status_downloading">Downloading</string>
    <string name="status_pending">Pending</string>
    <string name="status_installing">Installing</string>
    <string name="status_installed">Installed</string>
    <string name="status_canceled">Canceled</string>
    <string name="status_error">Error</string>

    <string name="ok">Ok</string>
    <string name="title_images">Images</string>
    <string name="title_exercises_storage">Exercises Storage</string>

    <string name="exercises">Exercises</string>
    <string name="exercises_storage">Exercises storage</string>
    <string name="tutorial">Tutorial</string>
    <string name="images" translatable="false">Images</string>
    <string name="hide">hide</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="download_feature">Download feature</string>
    <string name="download_storage_desc">This feature will allow you to save these exercises in your storage. However, in order to use this feature the app needs to download some files from the Playstore?</string>
    <string name="download_tutorial_desc">This feature will show you how to use the app. You have previously uninstalled this feature, so you need to download it again to use it. Do you want to download this feature?</string>
    <string name="downloading_already">This feature is already being downloaded</string>
    <string name="download_include_storage">Include storage feature</string>
    <string name="download_exercises_desc">This feature will allow you to generate random cryptography exercises for you to solve. Do you want to download this feature?</string>
    <string name="downloading_error_network">You need an internet connection to download the module</string>
    <string name="downloading_error_session">You are already downloading a feature at the moment. You can download this module once the previous session is done.</string>
    <string name="downloading_error">Error occured when downloading the module. Try again later.</string>
</resources>