<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cipherExpandBtn"
        style="@style/CryptographerTitles"
        android:text="@string/caeser_encryption" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/cipherExpandableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:el_duration="500"
        app:el_expanded="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cipherInputLayout"
                style="@style/CryptographerEditText"
                android:hint="@string/input"
                app:boxBackgroundColor="#FFFFFF"
                app:helperTextEnabled="false"
                app:hintTextAppearance="@style/TextInputLayoutHelper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cipherInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:textSize="15sp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cipherKeyLayout"
                style="@style/CryptographerEditText"
                android:layout_below="@id/cipherInputLayout"
                android:layout_marginBottom="10dp"
                android:hint="@string/key"
                app:helperText="@string/caeser_helper_key"
                app:helperTextEnabled="true"
                app:hintTextAppearance="@style/TextInputLayoutHelper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cipherKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi"
                    android:textSize="15sp"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutButtonCipher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cipherKeyLayout"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <Button
                    style="@style/CryptographerButtons"
                    android:id="@+id/cipherEncryptBtn"
                    android:layout_marginLeft="10dp"
                    android:text="@string/encrypt"
                    android:enabled="false"
                    />

                <Button
                    style="@style/CryptographerButtons"
                    android:id="@+id/cipherDecryptBtn"
                    android:backgroundTint="#D5D5D5"
                    android:enabled="false"
                    android:text="@string/decrypt" />

                <Button
                    style="@style/CryptographerButtons"
                    android:id="@+id/cipherClearBtn"
                    android:layout_marginRight="10dp"
                    android:text="@string/clear" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cipherOutputLayout"
                style="@style/CryptographerOutput"
                android:layout_below="@id/layoutButtonCipher"
                android:hint="@string/cipher_text"
                android:textColorHint="#FFFFFF"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cipherOutput"
                    style="@style/CryptographerOutputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </net.cachapa.expandablelayout.ExpandableLayout>

</LinearLayout>

